Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45803

REG: QSystemTrayIcon/DBusTray: Context menu doesn't handle submenus, when it is added after QSystemTrayIcon::setContextMenu()

XMLWordPrintable

    • d8bfd812c3383e24196588f5d3e1de4719fcac02

      Context menu on QSystemTrayIcon (DBusTray) doesn't handle submenus, when it is added after QSystemTrayIcon::setContextMenu(). This bug is related to "QTBUG-45191".
      Attachments contains:

      • simple program which can reproduce the problem,
      • 1.png - correct (Qt < 5.4.0)
      • 2.png - incorrect (Qt 5.5 from GIT)
        I think that "QWidgetAction" is not supported by DBusTray protocol - maybe it should be completely invisible in menu?

        1. 1.png
          1.png
          18 kB
        2. 2.png
          2.png
          7 kB
        3. qt5-dbus-tray-tester.tar.gz
          0.8 kB
        For Gerrit Dashboard: QTBUG-45803
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes